--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 plugins {
+	id 'java'
+	id 'idea'
 	id 'org.springframework.boot' version '2.5.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
 //	id 'war'
 }
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
-//sourceCompatibility = '11'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
