--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
+jar {
+	enabled = false
+}
+
 test {
 	useJUnitPlatform()
 }
