--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 plugins {
 	id 'java'
 	id 'idea'
-	id 'org.springframework.boot' version '2.5.2'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+//	id 'org.springframework.boot' version '2.5.2'
+//	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '2.1.14.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 //	id 'war'
 }
 
