Attempt to Heroku step 7

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,15 @@ dependencies {
 //	archiveClassifier = ''
 //}
 
+jar {
+	manifest {
+		attributes(
+				'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+				'Main-Class': 'com.crud.tasks.TasksApplication'
+		)
+	}
+}
+
 test {
 	useJUnitPlatform()
 }
