Attempt to Heroku 13 step

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ trello.app.username=grzegorztrofimiec
 #spring.datasource.username=root
 #spring.datasource.password=George01!
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
