--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
 	id 'java'
 	id 'idea'
-//	id 'org.springframework.boot' version '2.5.2'
-//	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'org.springframework.boot' version '2.1.14.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'org.springframework.boot' version '2.5.2'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+//	id 'org.springframework.boot' version '2.1.14.RELEASE'
+//	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 //	id 'war'
 }
 
@@ -20,8 +20,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	runtimeOnly 'mysql:mysql-connector-java'
-//	runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+//    runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
