--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ dependencies {
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
-//jar {
-//	enabled = true
+jar {
+	enabled = false
 //	archiveClassifier = ''
-//}
+}
 
 //jar {
 //	manifest {
