--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 //	implementation 'org.postgresql:postgresql'
-    runtimeOnly 'mysql:mysql-connector-java'
-//	runtimeOnly 'org.postgresql:postgresql'
+//    runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -39,15 +39,6 @@ jar {
 	enabled = false
 //	archiveClassifier = ''
 }
-
-//jar {
-//	manifest {
-//		attributes(
-//				'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-//				'Main-Class': 'com.crud.tasks.TasksApplication'
-//		)
-//	}
-//}
 
 test {
 	useJUnitPlatform()
