(23.3) Zadanie: dodanie maila do wiadomości (ang. CC)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.datasource.username=root
 spring.datasource.password=George01!
 
 spring.jpa.show-sql=true
+
+# EMAIL CONFIGURATION
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
