Testing email feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.datasource.password=George01!
 spring.jpa.show-sql=true
 
 # EMAIL CONFIGURATION
+admin.mail=gtrofimiec@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
