--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,6 @@ plugins {
 	id 'idea'
 	id 'org.springframework.boot' version '2.5.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-//	id 'org.springframework.boot' version '2.1.14.RELEASE'
-//	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-//	id 'war'
 }
 
 group = 'com.crud'
@@ -37,6 +34,10 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+}
+
+jar {
+	enabled = false
 }
 
 test {
