--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,15 @@ trello.app.user=grzegorztrofimiec
 #spring.datasource.username=root
 #spring.datasource.password=George01!
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 # EMAIL CONFIGURATION
 admin.mail=gtrofimiec@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-#spring.mail.password=qsbfaomxnysejwha
+#spring.mail.username=${MAIL_USERNAME}
+#spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=gtrofimiec@gmail.com
+spring.mail.password=qsbfaomxnysejwha
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
