--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,9 @@ dependencies {
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
-//jar {
-//	enabled = false
-//}
+jar {
+	enabled = false
+}
 
 test {
 	useJUnitPlatform()
