--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     implementation 'junit:junit:4.13.1'
 	testImplementation 'com.google.code.gson:gson'
 
-    compile('io.springfox:springfox-swagger2:2.9.2')
-	compile('io.springfox:springfox-swagger-ui:2.9.2')
+//    compile('io.springfox:springfox-swagger2:2.9.2')
+//	compile('io.springfox:springfox-swagger-ui:2.9.2')
 
-//    runtimeOnly 'mysql:mysql-connector-java'
-	runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'mysql:mysql-connector-java'
+//	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
