--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
@@ -21,12 +21,11 @@ spring.jpa.show-sql=true
 
 # EMAIL CONFIGURATION
 admin.mail=gtrofimiec@gmail.com
+admin.name = Kodilla User
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
-#spring.mail.password=${MAIL_PASSWORD}
-#spring.mail.username=gtrofimiec@gmail.com
-spring.mail.password=qmrr oqjn wzdj umjp
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
